# Ai_generated_iflow

./: .gitignore
intelliflow/backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
intelliflow/backend/app/: config.py  db.py  main.py
intelliflow/backend/app/middleware/: request_id.py
intelliflow/backend/app/models/: flow_document.py
intelliflow/backend/app/rag/: bm25.py  chroma_client.py  embeddings.py  ingest.py  reranker.py  retriever.py  rewriter.py  splitter.py  validators.py
intelliflow/backend/app/routers/: iflow.py
intelliflow/backend/app/schemas/: flow.py  validation.py
intelliflow/backend/app/services/: error_fixer.py  iflow_generator.py  iflw_bundle.py  iflw_xml.py  limiter.py  llm.py  pdf.py  prompt.py  rate_limit.py  secrets.py  token_guard.py  tracing.py  xml_builder.py  xml_validator.py  xsd_validator.py
intelliflow/backend/knowledge_base/error_handling/: dead_letter_queue.md  exception_subprocess.md  retry_strategies.md
intelliflow/backend/knowledge_base/message_mapping/: graphical_mapping.md  value_mapping.md  xslt_mapping.md
intelliflow/backend/knowledge_base/patterns/: async_queue.md  file_to_api.md  request_reply.md
intelliflow/backend/knowledge_base/sap_cpi_components/: content_modifier.md  https_receiver.md  https_sender.md  mail_receiver.md  odata_receiver.md  router.md  (+4 more)
intelliflow/backend/tests/: conftest.py  test_fix_xml.py  test_generate.py  test_history_and_export.py  test_iflw_bundle.py  test_iflw_xml.py  test_prompt.py  test_secrets_and_tracing.py  test_token_guard.py  test_validate_xml.py
(+12 files in other folders)
