[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelliflow-backend"
version = "0.2.0"
description = "IntelliFlow AI backend — converts plain-English business requirements into SAP CPI iFlow designs with RAG-grounded generation."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "motor>=3.4,<4.0",
    "openai>=1.14,<2.0",
    "anthropic>=0.34,<1.0",
    "lxml>=5.1,<6.0",
    "xmltodict>=0.13,<1.0",
    "python-dotenv>=1.0,<2.0",
    "chromadb>=0.5,<1.0",
    "rank-bm25>=0.2,<1.0",
    "tiktoken>=0.7,<1.0",
    "cachetools>=5.3,<6.0",
    "slowapi>=0.1.9,<1.0",
    "reportlab>=4.1,<5.0",
    "pygments>=2.17,<3.0",
    "graphviz>=0.20,<1.0",
    "Pillow>=10.2,<12.0",
    "PyYAML>=6.0,<7.0",
    "sentence-transformers>=2.7,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "anyio>=4.2,<5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
